// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiDualRange allows value prop to accept empty strings 1`] = `
<div
  class="wuiRangeWrapper wuiDualRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="wuiRangeSlider wuiRangeSlider--hasRange wuiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`WuiDualRange allows value prop to accept numbers 1`] = `
<div
  class="wuiRangeWrapper wuiDualRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="wuiRangeSlider wuiRangeSlider--hasRange wuiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`WuiDualRange input props can be applied to min and max inputs 1`] = `
<div
  class="wuiRangeWrapper wuiDualRange"
>
  <div
    class="wuiFormControlLayout"
  >
    <div
      class="wuiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Min value"
        class="wuiFieldNumber wuiRangeInput wuiRangeInput--min"
        max="8"
        min="1"
        name="name-minValue"
        step="1"
        style="width:3.6em"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="wuiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:0%;width:77.77777777777779%"
      />
    </div>
    <input
      aria-hidden="true"
      class="wuiRangeSlider wuiRangeSlider--hasRange wuiDualRange__slider"
      id="id"
      max="10"
      min="1"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
  <div
    class="wuiRange__horizontalSpacer"
  />
  <div
    class="wuiFormControlLayout"
  >
    <div
      class="wuiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Max value"
        class="wuiFieldNumber wuiRangeInput wuiRangeInput--max"
        max="10"
        min="1"
        name="name-maxValue"
        step="1"
        style="width:3.6em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`WuiDualRange is rendered 1`] = `
<div
  class="wuiRangeWrapper wuiDualRange testClass1 testClass2"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="wuiRangeSlider wuiRangeSlider--hasRange wuiDualRange__slider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`WuiDualRange props compressed should render 1`] = `
<div
  class="wuiRangeWrapper wuiRangeWrapper--compressed wuiDualRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight wuiRangeHighlight--compressed"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="wuiRangeSlider wuiRangeSlider--hasRange wuiRangeSlider--compressed wuiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`WuiDualRange props custom ticks should render 1`] = `
<div
  class="wuiRangeWrapper wuiDualRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
    style="margin-right:0.6em"
  >
    <div
      class="wuiRangeTicks"
    >
      <button
        class="wuiRangeTick wuiRangeTick--isCustom"
        style="left:20%"
        tabindex="-1"
        title="20kb"
        type="button"
        value="20"
      >
        20kb
      </button>
      <button
        class="wuiRangeTick wuiRangeTick--isCustom"
        style="left:100%"
        tabindex="-1"
        title="100kb"
        type="button"
        value="100"
      >
        100kb
      </button>
    </div>
    <div
      class="wuiRangeHighlight wuiRangeHighlight--hasTicks"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:20%;width:80%"
      />
    </div>
    <input
      aria-hidden="true"
      class="wuiRangeSlider wuiRangeSlider--hasTicks wuiRangeSlider--hasRange wuiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`WuiDualRange props disabled should render 1`] = `
<div
  class="wuiRangeWrapper wuiDualRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack wuiRangeTrack--disabled"
  >
    <div
      class="wuiRangeHighlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="wuiRangeSlider wuiRangeSlider--hasRange wuiDualRange__slider"
      disabled=""
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`WuiDualRange props fullWidth should render 1`] = `
<div
  class="wuiRangeWrapper wuiRangeWrapper--fullWidth wuiDualRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="wuiRangeSlider wuiRangeSlider--hasRange wuiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`WuiDualRange props inputs should render 1`] = `
<div
  class="wuiRangeWrapper wuiDualRange testClass1 testClass2"
>
  <div
    class="wuiFormControlLayout"
  >
    <div
      class="wuiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="wuiFieldNumber wuiRangeInput wuiRangeInput--min"
        max="8"
        min="0"
        name="name-minValue"
        step="1"
        style="width:4.4em"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="wuiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="wuiRangeSlider wuiRangeSlider--hasRange wuiDualRange__slider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
  <div
    class="wuiRange__horizontalSpacer"
  />
  <div
    class="wuiFormControlLayout"
  >
    <div
      class="wuiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="wuiFieldNumber wuiRangeInput wuiRangeInput--max"
        max="100"
        min="1"
        name="name-maxValue"
        step="1"
        style="width:4.4em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`WuiDualRange props labels should render 1`] = `
<div
  class="wuiRangeWrapper wuiDualRange"
>
  <label
    class="wuiRangeLabel wuiRangeLabel--min"
  >
    0
  </label>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="wuiRangeSlider wuiRangeSlider--hasRange wuiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
  <label
    class="wuiRangeLabel wuiRangeLabel--max"
  >
    100
  </label>
</div>
`;

exports[`WuiDualRange props levels should render 1`] = `
<div
  class="wuiRangeWrapper wuiDualRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeLevels"
    >
      <span
        class="wuiRangeLevel wuiRangeLevel--danger"
        style="width:20%"
      />
      <span
        class="wuiRangeLevel wuiRangeLevel--success"
        style="width:80%"
      />
    </div>
    <div
      class="wuiRangeHighlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="wuiRangeSlider wuiRangeSlider--hasRange wuiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`WuiDualRange props range should render 1`] = `
<div
  class="wuiRangeWrapper wuiDualRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="wuiRangeSlider wuiRangeSlider--hasRange wuiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`WuiDualRange props slider should display in popover 1`] = `
<div
  class="wuiPopover wuiPopover--anchorDownLeft wuiPopover--displayBlock wuiInputPopover wuiRange__popover"
>
  <div
    class="wuiPopover__anchor"
  >
    <div>
      <div
        class="wuiFormControlLayout wuiFormControlLayoutDelimited"
      >
        <div
          class="wuiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="wuiFieldNumber wuiFormControlLayoutDelimited__input"
            max="8"
            min="0"
            name="name-minValue"
            step="1"
            type="number"
            value="1"
          />
          <div
            class="wuiText wuiText--small wuiFormControlLayoutDelimited__delimeter"
          >
            <div
              class="wuiTextColor wuiTextColor--subdued"
            >
              →
            </div>
          </div>
          <input
            aria-label="aria-label"
            class="wuiFieldNumber wuiFormControlLayoutDelimited__input"
            max="100"
            min="1"
            name="name-maxValue"
            step="1"
            type="number"
            value="8"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WuiDualRange props ticks should render 1`] = `
<div
  class="wuiRangeWrapper wuiDualRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
    style="margin-right:0.6em"
  >
    <div
      class="wuiRangeTicks"
      style="margin:0 -8.333333333333332%;left:0;right:0"
    >
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="0"
      >
        0
      </button>
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="20"
      >
        20
      </button>
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="40"
      >
        40
      </button>
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="60"
      >
        60
      </button>
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="80"
      >
        80
      </button>
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="100"
      >
        100
      </button>
    </div>
    <div
      class="wuiRangeHighlight wuiRangeHighlight--hasTicks"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="wuiRangeSlider wuiRangeSlider--hasTicks wuiRangeSlider--hasRange wuiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;
